--- a/subjects/templates/subjects/index.html
+++ b/subjects/templates/subjects/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
+{% load staticfiles %}
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-		<link rel="stylesheet" href="{{ MEDIA_URL }}subjects/css/subjects.css" type="text/css">
-		<script type="text/javascript" src="{{ MEDIA_URL }}subjects/scripts/jquery-1.2.6.pack.js"></script>
+                <link rel="stylesheet" href="{% static "subjects/css/subjects.css" %}" type="text/css">
+	        <script type="text/javascript" src="{% static "subjects/scripts/jquery-1.2.6.pack.js" %}"></script>
 		<script type="text/javascript">
     $(document).ready(function() {
 				$('div.list> div').hide();
