--- a/subjects/templates/subjects/add_subject.html
+++ b/subjects/templates/subjects/add_subject.html
@@ -7,11 +7,11 @@
 {% block content %}
 
 	{% if saved %}
-		{% ifnotequal browse_len 1 %}
+		{% if browse_len != 1 %}
 			<div class="subdiv">Subject Structure (click previous subjects to go back)</div>
 		{% else %}
 			<div class="subdiv">Subject Structure (click Main to go back to the original browse structure)</div>
-		{% endifnotequal %}
+		{% endif %}
 		&nbsp;<span class="browse"><a href="{% url 'admin_main_add' %}">Main</a> ></span>
 		{% for value in browse_nav %}
 				<span class="browse"><a href="{% url 'admin_add' value.id %}">{{ value.name }}</a> ></span>
@@ -19,11 +19,11 @@
 		<br/><br/> <div class="subdiv">Added "<span style="color:#368237;">{{ saved.name }}</span>"</div>
 	{% else %}
 		{% if browse_nav %}
-			{% ifnotequal browse_len 1 %}
+			{% if browse_len != 1 %}
 				<div class="subdiv">Subject Structure (click previous subjects to go back)</div>
 			{% else %}
 				<div class="subdiv">Subject Structure (click Main to go back to the original browse structure)</div>
-			{% endifnotequal %}
+			{% endif %}
 			&nbsp;<span class="browse"><a href="{% url 'admin_main_add' %}">Main</a> ></span>
 			{% for value in browse_nav %}
 					{% if forloop.last %}
