--- a/subjects/templates/subjects/modify_subject.html
+++ b/subjects/templates/subjects/modify_subject.html
@@ -4,11 +4,11 @@
 {% block tab_modify %}In{% endblock %}
 {% block content %}
 	{% if modified %}
-		{% ifnotequal browse_len 1 %}
+		{% if browse_len != 1 %}
 			<div class="subdiv">Subject Structure (click previous subjects to go back)</div>
 		{% else %}
 			<div class="subdiv">Subject Structure (click Main to go back to the original browse structure)</div>
-		{% endifnotequal %}
+		{% endif %}
 		&nbsp;<span class="browse"><a href='{% url 'admin_main_modify' %}'>Main</a> ></span>
 		{% for value in browse_nav %}
 				<span class="browse"><a href='{% url 'admin_modify' value.id %}'>{{ value.name }}</a> ></span>
@@ -16,11 +16,11 @@
 		<br/><br/> <div class="subdiv">"<span style="color:#b14103;">{{ modified.name }}</span>" Modified</div>
 	{% else %}
 		{% if browse_nav %}
-			{% ifnotequal browse_len 1 %}
+			{% if browse_len != 1 %}
 				<div class="subdiv">Subject Structure (click previous subjects to go back)</div>
 			{% else %}
 				<div class="subdiv">Subject Structure (click Main to go back to the original browse structure)</div>
-			{% endifnotequal %}
+			{% endif %}
 			&nbsp;<span class="browse"><a href='{% url 'admin_main_modify' %}'>Main</a> ></span>
 			{% for value in browse_nav %}
 					{% if forloop.last %}
