--- a/subjects/templates/subjects/subject_search.html
+++ b/subjects/templates/subjects/subject_search.html
@@ -11,7 +11,7 @@
 <br/>
 {% if search_results %}
 	<div class="subdiv">
-		Search Result{% if results_len != 1 %}s{% endif %}:
+		Search Result{{ results_len|pluralize }}:
 	</div>
 	{% for value in search_results %}
 		<div class="list">
